--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <main>
-        <h1 class="title"></h1>
+        <div class="relative">
+            <img src="./images/tumblr_mfkpmuXjHE1rfjowdo1_500.gif" alt="logo" class="pokeball">
+        </div>
+
+        <h1 class="title">tic tac toe</h1>
+
         <div class="boxes">
             <button class="box" id="b1"></button>
             <button class="box" id="b2"></button>
