--- a/index.html
+++ b/index.html
@@ -5,28 +5,119 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="./main.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <div class="relative">
-            <img src="./images/tumblr_mfkpmuXjHE1rfjowdo1_500.gif" alt="logo" class="pokeball">
+            <img src="./images/pokeball.gif" alt="logo" class="pokeball">
         </div>
 
         <h1 class="title">tic tac toe</h1>
 
-        <div class="boxes">
-            <button class="box" id="b1"></button>
-            <button class="box" id="b2"></button>
-            <button class="box" id="b3"></button>
-            <button class="box" id="b4"></button>
-            <button class="box" id="b5"></button>
-            <button class="box" id="b6"></button>
-            <button class="box" id="b7"></button>
-            <button class="box" id="b8"></button>
-            <button class="box" id="b9"></button>
+        <div class="game-result"></div>
+
+        <div class="container">
+            <div class="carousel1">
+                <h2>player 1</h2>
+                <div id="carouselExampleControls" class="carousel slide" data-bs-interval="false">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="./images/pikachu.gif" class="d-block w-50" alt="pikachu">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="./images/charmander.gif" class="d-block w-50" alt="charmander">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="./images/bulbasaur.gif" class="d-block w-50" alt="bulbasaur">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/squirtle.gif" class="d-block w-50" alt="squirtle">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./images/snorlax.gif" class="d-block w-50" alt="snorlax">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./images/butterfree.gif" class="d-block w-50" alt="butterfree">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./images/onyx.webp" class="d-block w-50" alt="onyx">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./images/mew.gif" class="d-block w-50" alt="mew">
+                          </div>
+                      </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                  <p>You are X</p>
+            </div>
+
+            <div class="boxes">
+                <button class="box" id="b1"></button>
+                <button class="box" id="b2"></button>
+                <button class="box" id="b3"></button>
+                <button class="box" id="b4"></button>
+                <button class="box" id="b5"></button>
+                <button class="box" id="b6"></button>
+                <button class="box" id="b7"></button>
+                <button class="box" id="b8"></button>
+                <button class="box" id="b9"></button>
+            </div>
+
+            <div class="carousel2">
+                <h2>player 2</h2>
+                <div id="carouselExampleControls2" class="carousel slide" data-bs-interval="false">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="./images/pikachu.gif" class="d-block w-50" alt="pikachu">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="./images/charmander.gif" class="d-block w-50" alt="charmander">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="./images/bulbasaur.gif" class="d-block w-50" alt="bulbasaur">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/squirtle.gif" class="d-block w-50" alt="squirtle">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/snorlax.gif" class="d-block w-50" alt="snorlax">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/butterfree.gif" class="d-block w-50" alt="butterfree">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/onyx.webp" class="d-block w-50" alt="onyx">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/mew.gif" class="d-block w-50" alt="mew">
+                        </div>
+                      </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                  <p>You are O</p>
+            </div>
         </div>
+
+        <button class="restart">Restart</button>
+
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
